@@ -1,6 +1,6 @@
 package com.projectgalen.lib.utils.collections;
 
-// ===========================================================================
+// ===============================================================================================================================
 //     PROJECT: PGUtils
 //    FILENAME: PGCollections.java
 //         IDE: IntelliJ IDEA
@@ -9,18 +9,14 @@ package com.projectgalen.lib.utils.collections;
 //
 // Copyright © 2023 Project Galen. All rights reserved.
 //
-// Permission to use, copy, modify, and distribute this software for any
-// purpose with or without fee is hereby granted, provided that the above
-// copyright notice and this permission notice appear in all copies.
+// Permission to use, copy, modify, and distribute this software for any purpose with or without fee is hereby granted, provided
+// that the above copyright notice and this permission notice appear in all copies.
 //
-// THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
-// WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
-// MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
-// SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
-// WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
-// ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR
-// IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-// ===========================================================================
+// THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED
+// WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR
+// CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
+// NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+// ===============================================================================================================================
 
 import com.projectgalen.lib.utils.PGResourceBundle;
 import org.jetbrains.annotations.Contract;
@@ -31,6 +27,7 @@ import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.math.MathContext;
 import java.util.*;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -50,20 +47,20 @@ public final class PGCollections {
         return map;
     }
 
-    public static <T, C extends Collection<T>> BigDecimal bigDecimalSum(@NotNull C collection, @NotNull GetBigDecFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> BigDecimal bigDecimalSum(@NotNull C collection, @NotNull Function<T, BigDecimal> delegate) {
         return bigDecimalSum(collection, MathContext.UNLIMITED, delegate);
     }
 
-    public static <T, C extends Collection<T>> BigDecimal bigDecimalSum(@NotNull C collection, MathContext mathContext, @NotNull GetBigDecFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> BigDecimal bigDecimalSum(@NotNull C collection, MathContext mathContext, @NotNull Function<T, BigDecimal> delegate) {
         BigDecimal sum = null;
         for(T obj : collection)
-            sum = ((sum == null) ? delegate.getBigDecimal(obj) : sum.add(delegate.getBigDecimal(obj), mathContext));
+            sum = ((sum == null) ? delegate.apply(obj) : sum.add(delegate.apply(obj), mathContext));
         return ((sum == null) ? BigDecimal.ZERO : sum);
     }
 
-    public static <T, C extends Collection<T>> BigInteger bigIntegerSum(@NotNull C collection, @NotNull GetBigIntFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> BigInteger bigIntegerSum(@NotNull C collection, @NotNull Function<T, BigInteger> delegate) {
         BigInteger sum = BigInteger.ZERO;
-        for(T obj : collection) sum = sum.add(delegate.getBigInteger(obj));
+        for(T obj : collection) sum = sum.add(delegate.apply(obj));
         return sum;
     }
 
@@ -78,24 +75,24 @@ public final class PGCollections {
         return clone;
     }
 
-    public static <T, C extends Collection<T>> double doubleSum(@NotNull C collection, @NotNull GetDoubleFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> double doubleSum(@NotNull C collection, @NotNull Function<T, Double> delegate) {
         double sum = 0;
-        for(T obj : collection) sum += delegate.getDouble(obj);
+        for(T obj : collection) sum += delegate.apply(obj);
         return sum;
     }
 
-    public static <T, C extends Collection<T>> float floatSum(@NotNull C collection, @NotNull GetFloatFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> float floatSum(@NotNull C collection, @NotNull Function<T, Float> delegate) {
         float sum = 0;
-        for(T obj : collection) sum += delegate.getFloat(obj);
+        for(T obj : collection) sum += delegate.apply(obj);
         return sum;
     }
 
     public static <T> T getFirst(@Nullable List<T> list) {
-        return (((list == null) || list.isEmpty()) ? null : list.get(0));
+        return (((list == null) || list.isEmpty()) ? null : list.getFirst());
     }
 
     public static <T> T getLast(@Nullable List<T> list) {
-        return (((list == null) || list.isEmpty()) ? null : list.get(list.size() - 1));
+        return (((list == null) || list.isEmpty()) ? null : list.getLast());
     }
 
     public static <T> Stream<CollectionItem<T>> indexedStream(@NotNull Collection<T> c) {
@@ -105,15 +102,15 @@ public final class PGCollections {
         return builder.build();
     }
 
-    public static <T, C extends Collection<T>> int intSum(@NotNull C collection, @NotNull GetIntFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> int intSum(@NotNull C collection, @NotNull Function<T, Integer> delegate) {
         int sum = 0;
-        for(T obj : collection) sum += delegate.getInt(obj);
+        for(T obj : collection) sum += delegate.apply(obj);
         return sum;
     }
 
-    public static <T, C extends Collection<T>> long longSum(@NotNull C collection, @NotNull GetLongFromDelegate<T> delegate) {
+    public static <T, C extends Collection<T>> long longSum(@NotNull C collection, @NotNull Function<T, Long> delegate) {
         long sum = 0;
-        for(T obj : collection) sum += delegate.getLong(obj);
+        for(T obj : collection) sum += delegate.apply(obj);
         return sum;
     }
 
@@ -125,29 +122,5 @@ public final class PGCollections {
     public static <T, L extends List<T>> @Contract("null,_ -> null; !null,_ -> param1") L sort(L list, @NotNull Comparator<T> comparator) {
         if(list != null) list.sort(comparator);
         return list;
-    }
-
-    public interface GetBigDecFromDelegate<T> {
-        BigDecimal getBigDecimal(@NotNull T obj);
-    }
-
-    public interface GetBigIntFromDelegate<T> {
-        BigInteger getBigInteger(@NotNull T obj);
-    }
-
-    public interface GetDoubleFromDelegate<T> {
-        double getDouble(@NotNull T obj);
-    }
-
-    public interface GetFloatFromDelegate<T> {
-        float getFloat(@NotNull T obj);
-    }
-
-    public interface GetIntFromDelegate<T> {
-        int getInt(@NotNull T obj);
-    }
-
-    public interface GetLongFromDelegate<T> {
-        long getLong(@NotNull T obj);
     }
 }
